Fix bug on safari iOS

--- a/src/components/Notifications/Notifications.scss
+++ b/src/components/Notifications/Notifications.scss
@@ -1,4 +1,6 @@
 .notificationIconContainer {
+  background: none;
+  border: none;
   display: inline-block;
   position: relative;
 
